<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_title"
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_size_16"
                android:layout_marginTop="@dimen/spacing_size_56"
                android:layout_marginEnd="@dimen/spacing_size_16"
                android:text="@string/welcome_title"
                android:textSize="@dimen/fixed_text_size_header"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/login_message"
                style="@style/bodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_size_16"
                android:layout_marginTop="@dimen/spacing_size_8"
                android:layout_marginEnd="@dimen/spacing_size_16"
                android:text="@string/welcome_caption"
                android:textSize="@dimen/fixed_text_size_body"
                app:layout_constraintTop_toBottomOf="@+id/login_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_screen_email_til"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_size_16"
                android:layout_marginTop="@dimen/spacing_size_48"
                android:layout_marginEnd="@dimen/spacing_size_16"
                app:layout_constraintTop_toBottomOf="@+id/login_message">

                <EditText
                    android:id="@+id/login_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_screen_password_til"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_size_16"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="@dimen/spacing_size_16"
                app:layout_constraintTop_toBottomOf="@+id/login_screen_email_til"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/teal">

                <EditText
                    android:id="@+id/login_pwd_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_pwd"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/slimContainedButton.teal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_size_20"
                android:layout_marginTop="@dimen/spacing_size_32"
                android:layout_marginEnd="@dimen/spacing_size_20"
                android:layout_marginBottom="@dimen/spacing_size_8"
                android:text="@string/login"
                app:layout_constraintTop_toBottomOf="@+id/login_screen_password_til"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>